--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.24.1'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
     compileSdkVersion 25
@@ -6,9 +21,9 @@ android {
     defaultConfig {
         applicationId "exploitr.codeplay.speakoback"
         minSdkVersion 19
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0 Init"
+        targetSdkVersion 21
+        versionCode 11
+        versionName "1.1 WCR"
 
         vectorDrawables.useSupportLibrary = true
     }
@@ -25,4 +40,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+        transitive = true;
+    }
 }
